crates/review-buddy/tests/snapshots/queue_status__queue_status_100x30_no_colour.snap
---
source: crates/review-buddy/tests/queue_status.rs
expression: plain_dump(&mut app)
---
 review buddy  ·  demo · 4 sources · 7 changes                                           Liminal HQ
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮
│  Waiting on you · 2                                                                              │
│▌ ◐ Add a menu bar and keyboard-driven menus                                                   2h │
│▌ GH review-buddy#214 · ada · review requested                           ¶6   2 open   CI running │
│  ● Raise muted text contrast in the light theme                                               5h │
│  GH review-buddy#209 · jo · approved by you                ✓1  ✕1       ¶3                       │
│                                                                                                  │
│  Worth a look · 2                                                                                │
│  ✕ Cache pipeline status lookups                                                              7h │
│  GL flow!1182 · priya · you're mentioned                           ○1                 CI failing │
│  ● Tidy zsh startup                                                                           1d │
│  GH dotfiles#31 · smorris · yours                          ✓1      ○1   ¶5   2 open              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ liminal-hq/review-buddy#214 ────────────────────────────────────────────────────────────────── ▼ ╮
│ Add a menu bar and keyboard-driven menus                                                         │
│ ada wants ada/menus → main                                                                       │
│ +32 −1 · 3 files · opened 3d ago                                                                 │
│ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                                         │
│  Overview   Files 3   Checks 6   Conversation 3                                                  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────── │
│ Adds a menu bar along the top and a Menu type that tracks the selected item.                     │
│                                                                                                  │
│ • Menu::select_next and Menu::select_prev move the highlight                                     │
│ • Menu::activate returns the action for the highlighted item                                     │
│ • The bar itself is a plain Line, so it picks up the active theme                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  demo · 4 sources · 7 changes"
0:88 D " Liminal HQ"
1:1 BR " 1 ● All 7"
1:13 BD " 2"
1:16 D "● liminal-hq 3"
1:32 BD " 3"
1:35 D "● smorris 1"
1:48 BD " 4"
1:51 D "● platform 2"
1:65 BD " 5"
1:68 D "● gitlab.com 1"
2:0 B "╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮"
3:0 B "│"
3:3 B "Waiting on you"
3:17 D " · 2"
3:99 B "│"
4:0 B "│"
4:1 BR "▌"
4:3 R "◐"
4:5 BR "Add a menu bar and keyboard-driven menus"
4:45 R ""
4:96 DR "2h"
4:99 B "│"
5:0 B "│"
5:1 BR "▌"
5:3 R "GH review-buddy#214"
5:22 DR " ·"
5:25 R "ada"
5:28 DR " · review requested"
5:47 R ""
5:61 DR "             ¶6"
5:79 R "2 open"
5:85 DR ""
5:88 R "CI running"
5:99 B "│"
6:0 B "│"
6:96 D "5h"
6:99 B "│"
7:0 B "│"
7:22 D " ·"
7:27 D " · approved by you"
7:64 D ""
7:68 D "      ¶3"
7:99 B "│"
8:0 B "│"
8:99 B "│"
9:0 B "│"
9:3 B "Worth a look"
9:15 D " · 2"
9:99 B "│"
10:0 B "│"
10:3 B "✕"
10:96 D "7h"
10:99 B "│"
11:0 B "│"
11:15 D " ·"
11:23 D " · you're mentioned"
11:61 D "        ○1"
11:88 B "CI failing"
11:99 B "│"
12:0 B "│"
12:96 D "1d"
12:99 B "│"
13:0 B "│"
13:17 D " ·"
13:27 D " · yours"
13:64 D "     ○1   ¶5"
13:85 D ""
13:99 B "│"
14:0 B "│"
14:99 B "│"
15:0 B "╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
16:0 D "╭ liminal-hq/review-buddy#214 ────────────────────────────────────────────────────────────────── ▼ ╮"
17:0 D "│"
17:2 B "Add a menu bar and keyboard-driven menus"
17:99 D "│"
18:0 D "│"
18:5 D " wants"
18:21 D " →"
18:99 D "│"
19:0 D "│"
19:6 B "−1"
19:8 D " · 3 files · opened 3d ago"
19:99 D "│"
20:0 D "│"
20:2 B "a"
20:13 B "x"
20:32 B "c"
20:43 B "⏎"
20:51 B "m"
20:99 D "│"
21:0 D "│"
21:2 BR " Overview"
21:13 D " Files 3"
21:23 D " Checks 6"
21:34 D " Conversation 3"
21:99 D "│"
22:0 D "│"
22:2 D "────────────────────────────────────────────────────────────────────────────────────────────────"
22:99 D "│"
23:0 D "│"
23:99 D "│"
24:0 D "│"
24:99 D "│"
25:0 D "│"
25:99 D "│"
26:0 D "│"
26:99 D "│"
27:0 D "│"
27:99 D "│"
28:0 D "╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
29:1 B "⏎"
29:2 D " diff"
29:9 B "o"
29:10 D " open"
29:17 B "y"
29:18 D " copy"
29:25 B "s"
29:26 D " show filters"
29:41 B "?"
29:42 D " help"
29:49 B "T"
29:50 D " theme"
29:58 B "q"
29:59 D " quit"
