crates/review-buddy/tests/snapshots/queue_status__queue_status_160x40_default_theme.snap
---
source: crates/review-buddy/tests/queue_status.rs
expression: text(&render(&mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ sources ───────────────╮╭ queue ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ⟨ detail ╮
│▌ ● All               7 ││  Waiting on you · 2                                                                                                                │
│    every source        ││▌ ◐ Add a menu bar and keyboard-driven menus                                                                                     2h │
│  ● liminal-hq        3 ││▌ GH review-buddy#214 · ada · review requested                                                ¶3   2 open   CI running       +32 −1 │
│    github.com          ││  ● Raise muted text contrast in the light theme                                                                                 5h │
│  ● smorris           1 ││  GH review-buddy#209 · jo · approved by you                                     ✓1  ✕1       ¶3                              +1 −1 │
│    github.com          ││                                                                                                                                    │
│  ● platform          2 ││  Worth a look · 2                                                                                                                  │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups                                                                                                7h │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned                                                ○1                 CI failing        +8 −2 │
│    gitlab.com          ││  ● Tidy zsh startup                                                                                                             1d │
│                        ││  GH dotfiles#31 · smorris · yours                                               ✓1      ○1   ¶5   2 open                     +1 −1 │
│  Show  s to change     ││                                                                                                                                    │
│  [x] reviewing         ││  Can wait · 1                                                                                                                      │
│  [x] assigned          ││  · Clarify the install steps                                                                                                    3d │
│  [x] authored          ││  GL notes!12 · kai · approved by you                                                    ○    ¶2   open                       +1 −1 │
│  [ ] drafts            ││                                                                                                                                    │
│  [ ] noise             ││  ▸ Noise · 2 bot updates · ⏎ to expand                                                                                             │
│                        ││                                                                                                                                    │
│                        ││  ── That's everything.                                                                                                             │
│                        ││  7 in this view.                                                                                                                   │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
╰────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  p show detail  ? help  T theme  q quit
