crates/review-buddy/tests/snapshots/queue_status__queue_status_160x40_no_colour.snap
---
source: crates/review-buddy/tests/queue_status.rs
expression: plain_dump(&mut app)
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ sources ───────────────╮╭ queue ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ⟨ detail ╮
│▌ ● All               7 ││  Waiting on you · 2                                                                                                                │
│    every source        ││▌ ◐ Add a menu bar and keyboard-driven menus                                                                                     2h │
│  ● liminal-hq        3 ││▌ GH review-buddy#214 · ada · review requested                                                ¶3   2 open   CI running       +32 −1 │
│    github.com          ││  ● Raise muted text contrast in the light theme                                                                                 5h │
│  ● smorris           1 ││  GH review-buddy#209 · jo · approved by you                                     ✓1  ✕1       ¶3                              +1 −1 │
│    github.com          ││                                                                                                                                    │
│  ● platform          2 ││  Worth a look · 2                                                                                                                  │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups                                                                                                7h │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned                                                ○1                 CI failing        +8 −2 │
│    gitlab.com          ││  ● Tidy zsh startup                                                                                                             1d │
│                        ││  GH dotfiles#31 · smorris · yours                                               ✓1      ○1   ¶5   2 open                     +1 −1 │
│  Show  s to change     ││                                                                                                                                    │
│  [x] reviewing         ││  Can wait · 1                                                                                                                      │
│  [x] assigned          ││  · Clarify the install steps                                                                                                    3d │
│  [x] authored          ││  GL notes!12 · kai · approved by you                                                    ○    ¶2   open                       +1 −1 │
│  [ ] drafts            ││                                                                                                                                    │
│  [ ] noise             ││  ▸ Noise · 2 bot updates · ⏎ to expand                                                                                             │
│                        ││                                                                                                                                    │
│                        ││  ── That's everything.                                                                                                             │
│                        ││  7 in this view.                                                                                                                   │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
│                        ││                                                                                                                                    │
╰────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  p show detail  ? help  T theme  q quit

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  demo · 4 sources · 7 changes"
0:148 D " Liminal HQ"
1:0 D "╭ sources ───────────────╮"
1:26 B "╭ queue ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
1:149 BD " ⟨ detail"
1:159 B "╮"
2:0 D "│"
2:1 DR "▌"
2:3 BR "● All"
2:8 R ""
2:23 DR "7"
2:25 D "│"
2:26 B "│"
2:29 B "Waiting on you"
2:43 D " · 2"
2:159 B "│"
3:0 D "│"
3:1 R ""
3:5 DR "every source"
3:17 R ""
3:25 D "│"
3:26 B "│"
3:27 BR "▌"
3:29 R "◐"
3:31 BR "Add a menu bar and keyboard-driven menus"
3:71 R ""
3:156 DR "2h"
3:159 B "│"
4:0 D "│"
4:23 D "3 │"
4:26 B "│"
4:27 BR "▌"
4:29 R "GH review-buddy#214"
4:48 DR " ·"
4:51 R "ada"
4:54 DR " · review requested"
4:73 R ""
4:108 DR "             ¶3"
4:126 R "2 open"
4:132 DR ""
4:135 R "CI running"
4:145 DR ""
4:152 R "+32"
4:155 DR " −1"
4:158 R ""
4:159 B "│"
5:0 D "│"
5:5 D "github.com"
5:25 D "│"
5:26 B "│"
5:156 D "5h"
5:159 B "│"
6:0 D "│"
6:23 D "1 │"
6:26 B "│"
6:48 D " ·"
6:53 D " · approved by you"
6:111 D ""
6:115 D "      ¶3"
6:155 D " −1"
6:159 B "│"
7:0 D "│"
7:5 D "github.com"
7:25 D "│"
7:26 B "│"
7:159 B "│"
8:0 D "│"
8:23 D "2 │"
8:26 B "│"
8:29 B "Worth a look"
8:41 D " · 2"
8:159 B "│"
9:0 D "│"
9:5 D "gitlab.platform.ex…"
9:25 D "│"
9:26 B "│"
9:29 B "✕"
9:156 D "7h"
9:159 B "│"
10:0 D "│"
10:23 D "1 │"
10:26 B "│"
10:41 D " ·"
10:49 D " · you're mentioned"
10:108 D "        ○1"
10:135 B "CI failing"
10:145 D ""
10:155 D " −2"
10:159 B "│"
11:0 D "│"
11:5 D "gitlab.com"
11:25 D "│"
11:26 B "│"
11:156 D "1d"
11:159 B "│"
12:0 D "│"
12:25 D "│"
12:26 B "│"
12:43 D " ·"
12:53 D " · yours"
12:111 D "     ○1   ¶5"
12:132 D ""
12:155 D " −1"
12:159 B "│"
13:0 D "│"
13:3 BD "Show"
13:7 D "  s to change"
13:25 D "│"
13:26 B "│"
13:159 B "│"
14:0 D "│"
14:25 D "│"
14:26 B "│"
14:29 B "Can wait"
14:37 D " · 1"
14:159 B "│"
15:0 D "│"
15:25 D "│"
15:26 B "│"
15:29 D "·"
15:156 D "3d"
15:159 B "│"
16:0 D "│"
16:25 D "│"
16:26 B "│"
16:40 D " ·"
16:46 D " · approved by you"
16:108 D "        ○    ¶2"
16:130 D ""
16:155 D " −1"
16:159 B "│"
17:0 D "│"
17:3 D "[ ] drafts"
17:25 D "│"
17:26 B "│"
17:159 B "│"
18:0 D "│"
18:3 D "[ ] noise"
18:25 D "│"
18:26 B "│"
18:29 D "▸ Noise · 2 bot updates · ⏎ to expand"
18:159 B "│"
19:0 D "│"
19:25 D "│"
19:26 B "│"
19:159 B "│"
20:0 D "│"
20:25 D "│"
20:26 B "│"
20:29 D "── That's everything."
20:159 B "│"
21:0 D "│"
21:25 D "│"
21:26 B "│"
21:29 D "7 in this view."
21:159 B "│"
22:0 D "│"
22:25 D "│"
22:26 B "│"
22:159 B "│"
23:0 D "│"
23:25 D "│"
23:26 B "│"
23:159 B "│"
24:0 D "│"
24:25 D "│"
24:26 B "│"
24:159 B "│"
25:0 D "│"
25:25 D "│"
25:26 B "│"
25:159 B "│"
26:0 D "│"
26:25 D "│"
26:26 B "│"
26:159 B "│"
27:0 D "│"
27:25 D "│"
27:26 B "│"
27:159 B "│"
28:0 D "│"
28:25 D "│"
28:26 B "│"
28:159 B "│"
29:0 D "│"
29:25 D "│"
29:26 B "│"
29:159 B "│"
30:0 D "│"
30:25 D "│"
30:26 B "│"
30:159 B "│"
31:0 D "│"
31:25 D "│"
31:26 B "│"
31:159 B "│"
32:0 D "│"
32:25 D "│"
32:26 B "│"
32:159 B "│"
33:0 D "│"
33:25 D "│"
33:26 B "│"
33:159 B "│"
34:0 D "│"
34:25 D "│"
34:26 B "│"
34:159 B "│"
35:0 D "│"
35:25 D "│"
35:26 B "│"
35:159 B "│"
36:0 D "│"
36:25 D "│"
36:26 B "│"
36:159 B "│"
37:0 D "│"
37:25 D "│"
37:26 B "│"
37:159 B "│"
38:0 D "╰────────────────────────╯"
38:26 B "╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
39:1 B "⏎"
39:2 D " diff"
39:9 B "o"
39:10 D " open"
39:17 B "y"
39:18 D " copy"
39:25 B "s"
39:26 D " show filters"
39:41 B "p"
39:42 D " show detail"
39:56 B "?"
39:57 D " help"
39:64 B "T"
39:65 D " theme"
39:73 B "q"
39:74 D " quit"
